fix attention box link

--- a/src/components/AttentionBox/__stories__/attentionBox.stories.mdx
+++ b/src/components/AttentionBox/__stories__/attentionBox.stories.mdx
@@ -16,7 +16,7 @@ import person from "./assets/person.png";
 import Flex from "../../Flex/Flex";
 import { StoryDescription } from "../../../storybook/components/story-description/story-description";
 import Favorite from "../../Icon/Icons/components/Favorite";
-import { AttentionBoxLink } from "../AttentionBoxLink/AttentionBoxLink";
+import AttentionBoxLink from "../AttentionBoxLink/AttentionBoxLink";
 import "./attentionBox.stories.scss";
 
 export const metaSettings = createStoryMetaSettings({
