Remove RelatedComponents import

--- a/src/components/Accordion/Accordion/__stories__/accordion.stories.mdx
+++ b/src/components/Accordion/Accordion/__stories__/accordion.stories.mdx
@@ -8,7 +8,7 @@ import {
   WIZARD
 } from "../../../../storybook/components/related-components/component-description-map";
 import { accordionMultiActivePlaySuite, accordionSingleActivePlaySuite } from "../__tests__/accordion.interactions";
-import { RelatedComponentsDecorator, UsageGuidelines } from "../../../../storybook";
+import { UsageGuidelines } from "monday-ui-storybook-blocks";
 import "./accordion.stories.scss";
 
 <Meta
@@ -202,4 +202,4 @@ Only one section can be open at the time
 
 ## Related components
 
-<RelatedComponentsDecorator componentsNames={[WIZARD, BREADCRUBMS, STEPPER]} />
+<RelatedComponents componentsNames={[WIZARD, BREADCRUBMS, STEPPER]} />
