--- a/src/components/Box/__stories__/Box.stories.mdx
+++ b/src/components/Box/__stories__/Box.stories.mdx
@@ -1,7 +1,7 @@
 import { Box } from "../../../components";
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
 import { createStoryMetaSettingsDecorator } from "../../../storybook/functions/createStoryMetaSettingsDecorator";
-import { RelatedComponentsDecorator, Tip, UsageGuidelines } from "../../../storybook";
+import { Tip, UsageGuidelines } from "../../../storybook";
 import {
   DIALOG_CONTENT_CONTAINER,
   DIVIDER,
@@ -370,4 +370,4 @@ paddingStart
 
 ## Related components
 
-<RelatedComponentsDecorator componentsNames={[FLEX, DIVIDER, DIALOG_CONTENT_CONTAINER]} />
+<RelatedComponents componentsNames={[FLEX, DIVIDER, DIALOG_CONTENT_CONTAINER]} />
