--- a/src/components/Checkbox/__stories__/checkbox.stories.mdx
+++ b/src/components/Checkbox/__stories__/checkbox.stories.mdx
@@ -1,7 +1,7 @@
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
 import Checkbox from "../Checkbox";
 import { Link } from "../../../storybook";
-import { createComponentTemplate, createStoryMetaSettingsDecorator, RelatedComponentsDecorator } from "../../../storybook";
+import { createComponentTemplate, createStoryMetaSettingsDecorator } from "../../../storybook";
 import {
   DROPDOWN,
   RADIO_BUTTON,
@@ -215,4 +215,4 @@ Allows the user to choose a single option. For example: accept terms of use.
 
 ## Related components
 
-<RelatedComponentsDecorator componentsNames={[RADIO_BUTTON, TOGGLE, DROPDOWN]} />
+<RelatedComponents componentsNames={[RADIO_BUTTON, TOGGLE, DROPDOWN]} />
