--- a/src/components/Loader/__stories__/Loader.stories.mdx
+++ b/src/components/Loader/__stories__/Loader.stories.mdx
@@ -4,7 +4,6 @@ import {
   ComponentRules,
   createComponentTemplate,
   createStoryMetaSettingsDecorator,
-  RelatedComponentsDecorator,
   Tip,
   UsageGuidelines
 } from "../../../storybook";
@@ -244,4 +243,4 @@ Indicate the loading status in button if content or an action is loading.
 
 ## Related components
 
-<RelatedComponentsDecorator componentsNames={[SKELETON, PROGRESS_BAR, BUTTON]} />
+<RelatedComponents componentsNames={[SKELETON, PROGRESS_BAR, BUTTON]} />
