--- a/src/components/Search/__stories__/Search.stories.mdx
+++ b/src/components/Search/__stories__/Search.stories.mdx
@@ -3,7 +3,7 @@ import Search from "../Search";
 import { createComponentTemplate, createStoryMetaSettingsDecorator } from "../../../storybook";
 import DialogContentContainer from "../../DialogContentContainer/DialogContentContainer";
 import Combobox from "../../Combobox/Combobox";
-import { Link, RelatedComponentsDecorator, Tip, UsageGuidelines } from "../../../storybook/components";
+import { Link, Tip, UsageGuidelines } from "../../../storybook/components";
 import {
   COMBOBOX,
   DROPDOWN,
@@ -104,4 +104,4 @@ There are three sizes available: Small (32px), Medium (40px), and Large (48px).
 </Canvas>
 
 ## Related components
-<RelatedComponentsDecorator componentsNames={[DROPDOWN, TEXT_FIELD, COMBOBOX]} />
+<RelatedComponents componentsNames={[DROPDOWN, TEXT_FIELD, COMBOBOX]} />
