--- a/src/components/Slider/__stories__/Slider.stories.mdx
+++ b/src/components/Slider/__stories__/Slider.stories.mdx
@@ -3,7 +3,6 @@ import {
   createComponentTemplate,
   createStoryMetaSettingsDecorator,
   Link,
-  RelatedComponentsDecorator,
   Tip,
   UsageGuidelines,
   VerticalStories
@@ -217,4 +216,4 @@ __Important!__ Please use customisation very careful, only if you really need it
 
 ## Related components
 
-<RelatedComponentsDecorator componentsNames={[PROGRESS_BAR, TOGGLE, WIZARD]} />
+<RelatedComponents componentsNames={[PROGRESS_BAR, TOGGLE, WIZARD]} />
