--- a/src/components/TextField/__stories__/TextField.stories.mdx
+++ b/src/components/TextField/__stories__/TextField.stories.mdx
@@ -5,7 +5,6 @@ import {
   ComponentRules,
   createComponentTemplate,
   createStoryMetaSettingsDecorator,
-  RelatedComponentsDecorator,
   UsageGuidelines
 } from "../../../storybook";
 import { Check, CloseSmall, Email, Show } from "../../Icon/Icons";
@@ -246,4 +245,4 @@ Users can insert text.
 
 ## Related components
 
-<RelatedComponentsDecorator componentsNames={[DROPDOWN, SEARCH, COMBOBOX]} />
+<RelatedComponents componentsNames={[DROPDOWN, SEARCH, COMBOBOX]} />
