--- a/src/storybook/stand-alone-documentaion/colors/colors.stories.mdx
+++ b/src/storybook/stand-alone-documentaion/colors/colors.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from "@storybook/addon-docs";
-import { ComponentName, Frame, RelatedComponentsDecorator } from "../../components";
-import { COLORS, TYPOGRAPHY, SHADOW, SPACING } from "../../components/related-components/component-description-map";
+import { Frame } from "../../components";
+import { TYPOGRAPHY, SHADOW, SPACING } from "../../components/related-components/component-description-map";
 import { SemanticColors } from "./semantic-colors/semantic-colors";
 import { BackgroundColors } from "./background-colors/background-colors";
 import { TextColors } from "../../components/text-colors/text-colors";
@@ -63,4 +63,4 @@ The board’s main strength is its simple and visual appearance. That’s why th
 </Frame>
 
 ## Up next
-<RelatedComponentsDecorator componentsNames={[TYPOGRAPHY, SHADOW, SPACING]}/>
+<RelatedComponents componentsNames={[TYPOGRAPHY, SHADOW, SPACING]}/>
