--- a/src/components/Button/__stories__/button.stories.mdx
+++ b/src/components/Button/__stories__/button.stories.mdx
@@ -1,6 +1,6 @@
 import { useState, useCallback } from "react";
 import Button from "../Button";
-import { createComponentTemplate, createStoryMetaSettingsDecorator } from "../../../storybook";
+import { createStoryMetaSettingsDecorator } from "../../../storybook";
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
 import { Calendar, Remove, Add, Check } from "../../Icon/Icons";
 import {
@@ -8,7 +8,7 @@ import {
   SPLIT_BUTTON,
   CHIP
 } from "../../../storybook/components/related-components/component-description-map";
-import { MultipleStoryElementsWrapper, Link } from "../../../storybook";
+import { Link, createComponentTemplate } from "monday-ui-storybook-blocks";
 import "./button.stories.scss";
 
 export const metaSettings = createStoryMetaSettingsDecorator({
