--- a/src/components/Link/__stories__/Link.stories.mdx
+++ b/src/components/Link/__stories__/Link.stories.mdx
@@ -1,9 +1,9 @@
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
 import Link from "../Link.tsx";
-import { createComponentTemplate, createStoryMetaSettingsDecorator } from "../../../storybook";
+import { createStoryMetaSettingsDecorator } from "../../../storybook";
 import { ExternalPage, Gallery, Info, Link as IconLink } from "../../Icon/Icons";
 import { BUTTON, CHIP, BREADCRUBMS } from "../../../storybook/components/related-components/component-description-map";
-import { Link as StorybookLink } from "../../../storybook";
+import { Link as StorybookLink, createComponentTemplate } from "monday-ui-storybook-blocks";
 import "./Link.stories.scss";
 
 export const metaSettings = createStoryMetaSettingsDecorator({
