--- a/src/components/Toast/__stories__/toast.stories.mdx
+++ b/src/components/Toast/__stories__/toast.stories.mdx
@@ -4,7 +4,7 @@ import Toast from "../Toast";
 import { createComponentTemplate, createStoryMetaSettingsDecorator } from "../../../storybook";
 import Flex from "../../Flex/Flex";
 import Button from "../../Button/Button";
-import { Link, RelatedComponentsDecorator, Tip, UsageGuidelines } from "../../../storybook/components";
+import { Link, Tip, UsageGuidelines } from "../../../storybook/components";
 import {
   ALERT_BANNER,
   ATTENTION_BOX,
@@ -262,4 +262,4 @@ After a user has done an action, provide feedback to close the loop. For example
 
 ## Related components
 
-<RelatedComponentsDecorator componentsNames={[ALERT_BANNER, TOOLTIP, ATTENTION_BOX]} />
+<RelatedComponents componentsNames={[ALERT_BANNER, TOOLTIP, ATTENTION_BOX]} />
