--- a/src/storybook/stand-alone-documentaion/accessibility/accessibility.stories.mdx
+++ b/src/storybook/stand-alone-documentaion/accessibility/accessibility.stories.mdx
@@ -1,5 +1,5 @@
 import { Meta } from "@storybook/addon-docs";
-import { ComponentName, Frame, Link, UnstyledList, UnstyledListItem } from "../../components";
+import { ComponentName, Frame, Link, UnstyledList, UnstyledListItem } from "monday-ui-storybook-blocks";
 import { PrinciplesAccesability } from "./principles/principlesAccesability";
 import { COLORS, HIDDEN_TEXT, TYPOGRAPHY } from "../../components/related-components/component-description-map";
 import {
