Remove Frame, UnstyledList, UnstyledListItem

--- a/src/hooks/useActiveDescendantListFocus/__stories__/useActiveDescendantListFocus.stories.mdx
+++ b/src/hooks/useActiveDescendantListFocus/__stories__/useActiveDescendantListFocus.stories.mdx
@@ -4,7 +4,7 @@ import { Flex, Search } from "../../../components";
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
 import useActiveDescendantListFocus from "../index";
 import UseActiveDescendantListFocus from "./hooksDummyComponents/UseActiveDescendantListFocus";
-import { FunctionArgument, FunctionArguments, UnstyledList, UnstyledListItem } from "../../../storybook";
+import { FunctionArgument, FunctionArguments, UnstyledList, UnstyledListItem } from "monday-ui-storybook-blocks";
 import { overviewInteractionSuite } from "../__tests__/useActiveDescendantListFocus.interactions";
 import styles from "./useActiveDescendantListFocus.module.scss";
 
