--- a/src/storybook/stand-alone-documentaion/colors/colors.stories.mdx
+++ b/src/storybook/stand-alone-documentaion/colors/colors.stories.mdx
@@ -1,5 +1,5 @@
 import { Meta } from "@storybook/addon-docs";
-import { Frame } from "../../components";
+import { Frame } from "monday-ui-storybook-blocks";
 import { TYPOGRAPHY, SHADOW, SPACING } from "../../components/related-components/component-description-map";
 import { SemanticColors } from "./semantic-colors/semantic-colors";
 import { BackgroundColors } from "./background-colors/background-colors";
