--- a/src/storybook/stand-alone-documentaion/spacing/spacing.stories.mdx
+++ b/src/storybook/stand-alone-documentaion/spacing/spacing.stories.mdx
@@ -1,6 +1,7 @@
 import { Meta } from "@storybook/addon-docs";
 import { SpacingSizes } from "./spacing-sizes/spacing-sizes";
-import { ComponentName, Frame } from "../../components";
+import { ComponentName } from "../../components";
+import { Frame } from "monday-ui-storybook-blocks";
 import { menuExample, tipseenExample, toolbarExample } from "./assets";
 import { COLORS, TYPOGRAPHY, SHADOW } from "../../components/related-components/component-description-map";
 import "./spacing.stories.scss";
