--- a/src/storybook/stand-alone-documentaion/typography/typography.stories.mdx
+++ b/src/storybook/stand-alone-documentaion/typography/typography.stories.mdx
@@ -1,5 +1,5 @@
 import { Meta } from "@storybook/addon-docs";
-import { Frame, Link } from "../../components";
+import { Frame, Link } from "monday-ui-storybook-blocks";
 import { TextColors } from "../../components/text-colors/text-colors";
 import { TextStyles } from "./text-styles/text-styles";
 import { COLORS, SHADOW, SPACING } from "../../components/related-components/component-description-map";
