Remove StoryDescription and related imports

--- a/src/components/AttentionBox/__stories__/attentionBox.stories.mdx
+++ b/src/components/AttentionBox/__stories__/attentionBox.stories.mdx
@@ -14,7 +14,7 @@ import {
 } from "../../../storybook/components/related-components/component-description-map";
 import person from "./assets/person.png";
 import Flex from "../../Flex/Flex";
-import { StoryDescription } from "../../../storybook/components/story-description/story-description";
+import { StoryDescription } from "monday-ui-storybook-blocks";
 import Favorite from "../../Icon/Icons/components/Favorite";
 import { AttentionBoxLink } from "../AttentionBoxLink/AttentionBoxLink";
 import "./attentionBox.stories.scss";
