--- a/src/components/List/__stories__/List.stories.mdx
+++ b/src/components/List/__stories__/List.stories.mdx
@@ -18,7 +18,7 @@ import Avatar from "../../Avatar/Avatar";
 import { Icon } from "../../index";
 import DropdownChevronDown from "../../Icon/Icons/components/DropdownChevronDown";
 import DialogContentContainer from "../../DialogContentContainer/DialogContentContainer";
-import { StoryDescription } from "../../../storybook/components/story-description/story-description";
+import { StoryDescription } from "monday-ui-storybook-blocks";
 import { createStoryMetaSettingsDecorator } from "../../../storybook";
 import { Flex } from "../../";
 import { person1, person2, person3 } from "../../Avatar/__stories__/assets";
