--- a/src/components/Loader/__stories__/Loader.stories.mdx
+++ b/src/components/Loader/__stories__/Loader.stories.mdx
@@ -7,7 +7,7 @@ import {
   Tip,
   UsageGuidelines
 } from "../../../storybook";
-import { StoryDescription } from "../../../storybook/components/story-description/story-description";
+import { StoryDescription } from "monday-ui-storybook-blocks";
 import { Button, DialogContentContainer, Flex, Search } from "../..";
 import { Link } from "../../../storybook/components";
 import { useCallback, useState } from "react";
