--- a/src/components/AvatarGroup/__stories__/AvatarGroup.stories.mdx
+++ b/src/components/AvatarGroup/__stories__/AvatarGroup.stories.mdx
@@ -1,7 +1,7 @@
 import { useCallback, useState } from "react";
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
-import { UsageGuidelines } from "monday-ui-storybook-blocks";
-import { Link, StoryDescription, createStoryMetaSettingsDecorator } from "../../../storybook";
+import { UsageGuidelines, Link, StoryDescription } from "monday-ui-storybook-blocks";
+import { createStoryMetaSettingsDecorator } from "../../../storybook";
 import { AVATAR, COUNTER, TOOLTIP } from "../../../storybook/components/related-components/component-description-map";
 import { person1, person2, person3 } from "./assets";
 import AvatarGroup from "../AvatarGroup";
