--- a/src/components/Dropdown/__stories__/dropdown.stories.mdx
+++ b/src/components/Dropdown/__stories__/dropdown.stories.mdx
@@ -1,7 +1,7 @@
 import Dropdown from "../Dropdown";
 import { useCallback, useMemo, useRef, useState } from "react";
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
-import { createStoryMetaSettingsDecorator, Link } from "../../../storybook";
+import { createStoryMetaSettingsDecorator } from "../../../storybook";
 import {
   COMBOBOX,
   MENU,
@@ -15,7 +15,7 @@ import person2 from "./assets/person2.png";
 import Avatar from "../../Avatar/Avatar";
 import { OptionRenderer } from "./OptionRenderer.js";
 import Flex from "../../Flex/Flex";
-import { StoryDescription } from "../../../storybook/components/story-description/story-description";
+import { StoryDescription, Link } from "monday-ui-storybook-blocks";
 import { Attach, Email } from "../../Icon/Icons";
 import { DialogContentContainer } from "../../index";
 import Dialog from "../../Dialog/Dialog";
