--- a/src/components/Flex/__stories__/Flex.stories.mdx
+++ b/src/components/Flex/__stories__/Flex.stories.mdx
@@ -3,7 +3,7 @@ import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
 import { Add, Filter, Person, Search, Sort } from "../../Icon/Icons";
 import Button from "../../Button/Button";
 import Chips from "../../Chips/Chips";
-import { StoryDescription } from "../../../storybook/components/story-description/story-description";
+import { StoryDescription } from "monday-ui-storybook-blocks";
 import { LIST, MENU, TABS } from "../../../storybook/components/related-components/component-description-map";
 import { createStoryMetaSettingsDecorator } from "../../../storybook";
 import styles from "./Flex.stories.module.scss";
