--- a/src/components/MultiStepIndicator/__stories__/multiStepIndicator.stories.mdx
+++ b/src/components/MultiStepIndicator/__stories__/multiStepIndicator.stories.mdx
@@ -2,8 +2,7 @@ import MultiStepIndicator from "../MultiStepIndicator";
 import { useCallback, useEffect, useMemo, useState } from "react";
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
 import { STEP_STATUSES } from "../MultiStepConstants";
-import { createComponentTemplate } from "../../../storybook/functions/createComponentTemplate";
-import { StoryDescription } from "../../../storybook/components/story-description/story-description";
+import { StoryDescription, createComponentTemplate } from "monday-ui-storybook-blocks";
 import { BREADCRUBMS, STEPPER, TABS } from "../../../storybook/components/related-components/component-description-map";
 import { firstSteps, secondSteps, thirdSteps } from "./helper.js";
 import { Link } from "../../../storybook/components";
