Remove UsageGuidelines, Link, LinkComponent

--- a/src/components/AlertBanner/__stories__/alertBanner.stories.mdx
+++ b/src/components/AlertBanner/__stories__/alertBanner.stories.mdx
@@ -4,7 +4,7 @@ import AlertBannerText from "../AlertBannerText/AlertBannerText";
 import AlertBannerLink from "../AlertBannerLink/AlertBannerLink";
 import AlertBannerButton from "../AlertBannerButton/AlertBannerButton";
 import { ComponentRules, RelatedComponents, UsageGuidelines } from "monday-ui-storybook-blocks";
-import { Link } from "../../../storybook/components";
+import { Link } from "monday-ui-storybook-blocks";
 import { createStoryMetaSettingsDecorator } from "../../../storybook/functions/createStoryMetaSettingsDecorator";
 import {
   ATTENTION_BOX,
