--- a/src/components/BreadcrumbsBar/__stories__/breadcrumbsBar.stories.mdx
+++ b/src/components/BreadcrumbsBar/__stories__/breadcrumbsBar.stories.mdx
@@ -5,7 +5,7 @@ import Avatar from "../../Avatar/Avatar";
 import DialogContentContainer from "../../DialogContentContainer/DialogContentContainer";
 import { Board, Folder, Group, Workspace } from "../../Icon/Icons";
 import person3 from "./assets/person3.png";
-import { Link } from "../../../storybook/components";
+import { Link } from "monday-ui-storybook-blocks";
 import { BUTTON_GROUP, TABS, WIZARD } from "../../../storybook/components/related-components/component-description-map";
 import { createStoryMetaSettingsDecorator } from "../../../storybook/functions/createStoryMetaSettingsDecorator";
 import "./breadcrumbsBar.stories.scss";
