--- a/src/components/Checkbox/__stories__/checkbox.stories.mdx
+++ b/src/components/Checkbox/__stories__/checkbox.stories.mdx
@@ -1,7 +1,7 @@
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
 import Checkbox from "../Checkbox";
-import { Link } from "../../../storybook";
-import { createComponentTemplate, createStoryMetaSettingsDecorator } from "../../../storybook";
+import { Link, createComponentTemplate } from "monday-ui-storybook-blocks";
+import { createStoryMetaSettingsDecorator } from "../../../storybook";
 import {
   DROPDOWN,
   RADIO_BUTTON,
