--- a/src/components/Label/__stories__/label.stories.mdx
+++ b/src/components/Label/__stories__/label.stories.mdx
@@ -1,8 +1,8 @@
 import Label from "../Label";
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
-import { createComponentTemplate, createStoryMetaSettingsDecorator } from "../../../storybook";
+import { createStoryMetaSettingsDecorator } from "../../../storybook";
 import { CHIP, COUNTER, TOOLTIP } from "../../../storybook/components/related-components/component-description-map";
-import { Link, MultipleStoryElementsWrapper } from "../../../storybook/components";
+import { Link, MultipleStoryElementsWrapper, createComponentTemplate } from "monday-ui-storybook-blocks";
 import "./label.stories.scss";
 
 export const metaSettings = createStoryMetaSettingsDecorator({
