--- a/src/components/Modal/__stories__/modal.stories.mdx
+++ b/src/components/Modal/__stories__/modal.stories.mdx
@@ -1,6 +1,7 @@
 import { useCallback, useRef, useState } from "react";
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
-import { ComponentRules, createStoryMetaSettingsDecorator, Tip, UsageGuidelines } from "../../../storybook";
+import { createStoryMetaSettingsDecorator, Tip } from "../../../storybook";
+import { ComponentRules, UsageGuidelines } from "monday-ui-storybook-blocks";
 import ModalContent from "../ModalContent/ModalContent";
 import ModalFooter from "../ModalFooter/ModalFooter";
 import ModalHeader from "../ModalHeader/ModalHeader";
