--- a/src/components/ProgressBars/LinearProgressBar/__stories__/linearProgressBar.stories.mdx
+++ b/src/components/ProgressBars/LinearProgressBar/__stories__/linearProgressBar.stories.mdx
@@ -11,7 +11,7 @@ import {
   SPINNER,
   STEPPER
 } from "../../../../storybook/components/related-components/component-description-map";
-import { Link } from "../../../../storybook/components";
+import { Link } from "monday-ui-storybook-blocks";
 import BreadcrumbItem from "../../../BreadcrumbsBar/BreadcrumbItem/BreadcrumbItem";
 import BreadcrumbsBar from "../../../BreadcrumbsBar/BreadcrumbsBar";
 import "./linearProgressBar.stories.scss";
