--- a/src/components/Search/__stories__/Search.stories.mdx
+++ b/src/components/Search/__stories__/Search.stories.mdx
@@ -3,7 +3,8 @@ import Search from "../Search";
 import { createComponentTemplate, createStoryMetaSettingsDecorator } from "../../../storybook";
 import DialogContentContainer from "../../DialogContentContainer/DialogContentContainer";
 import Combobox from "../../Combobox/Combobox";
-import { Link, Tip, UsageGuidelines } from "../../../storybook/components";
+import { Tip } from "../../../storybook/components";
+import { Link, UsageGuidelines } from "monday-ui-storybook-blocks";
 import {
   COMBOBOX,
   DROPDOWN,
