--- a/src/components/Skeleton/__stories__/skeleton.stories.mdx
+++ b/src/components/Skeleton/__stories__/skeleton.stories.mdx
@@ -10,7 +10,7 @@ import Avatar from "../../Avatar/Avatar";
 import person from "./assets/person.png";
 import Button from "../../Button/Button";
 import { Replay, ThumbsUp } from "../../Icon/Icons";
-import { Link } from "../../../storybook/components";
+import { Link } from "monday-ui-storybook-blocks";
 import "./skeleton.stories.scss";
 
 <Meta title="Feedback/Skeleton" component={Skeleton} />
