--- a/src/components/Tabs/__stories__/tabs.stories.mdx
+++ b/src/components/Tabs/__stories__/tabs.stories.mdx
@@ -7,7 +7,7 @@ import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
 import { Calendar, Chart, Gantt, NavigationChevronDown, NewTab, Table } from "../../Icon/Icons";
 import DialogContentContainer from "../../DialogContentContainer/DialogContentContainer";
 import TextField from "../../TextField/TextField";
-import { Link, UsageGuidelines } from "../../../storybook/components";
+import { Link, UsageGuidelines } from "monday-ui-storybook-blocks";
 import {
   BREADCRUBMS,
   BUTTON_GROUP,
