--- a/src/components/VirtualizedList/__stories__/VirtualizedList.stories.mdx
+++ b/src/components/VirtualizedList/__stories__/VirtualizedList.stories.mdx
@@ -4,7 +4,8 @@ import { generateItems } from "./virtualizedList.components";
 import { useCallback } from "react";
 import { Flex } from "../../";
 import styles from "./virtualizedList.module.scss";
-import { Tip, UsageGuidelines } from "../../../storybook";
+import { Tip } from "../../../storybook";
+import { UsageGuidelines } from "monday-ui-storybook-blocks";
 
 <Meta title="Navigation/VirtualizedList" component={VirtualizedList} />
 
