--- a/src/hooks/useClickOutside/__stories__/useClickOutside.stories.mdx
+++ b/src/hooks/useClickOutside/__stories__/useClickOutside.stories.mdx
@@ -1,7 +1,7 @@
 import { useCallback, useRef, useState } from "react";
 import { Canvas, Meta, Story } from "@storybook/addon-docs";
 import useClickOutside from "..";
-import { FunctionArgument, FunctionArguments, UsageGuidelines } from "../../../storybook";
+import { FunctionArgument, FunctionArguments, UsageGuidelines } from "monday-ui-storybook-blocks";
 import "../../__stories__/general-hooks-stories.scss";
 
 <Meta title="Hooks/useClickOutside" />
