--- a/src/hooks/useHover/__stories__/useHover.stories.mdx
+++ b/src/hooks/useHover/__stories__/useHover.stories.mdx
@@ -1,7 +1,6 @@
 import { Canvas, Meta, Story } from "@storybook/addon-docs";
 import useHover from "../useHover";
-import UsageGuidelines from "../../../storybook/components/usage-guidelines/usage-guidelines";
-import { Link } from "../../../storybook";
+import { Link, UsageGuidelines } from "monday-ui-storybook-blocks";
 import cx from "classnames";
 import "../../__stories__/general-hooks-stories.scss";
 import styles from "./useHover.stories.module.scss";
