--- a/src/components/Avatar/__stories__/avatar.stories.mdx
+++ b/src/components/Avatar/__stories__/avatar.stories.mdx
@@ -7,9 +7,8 @@ import {
   TOOLTIP
 } from "../../../storybook/components/related-components/component-description-map";
 import { WhatsNew } from "../../Icon/Icons";
-import { ComponentRules, createComponentTemplate } from "monday-ui-storybook-blocks";
 import { Tip, createStoryMetaSettingsDecorator } from "../../../storybook";
-import { StoryDescription, Link } from "monday-ui-storybook-blocks";
+import { StoryDescription, Link, ComponentRules, createComponentTemplate } from "monday-ui-storybook-blocks";
 import Tooltip from "../../Tooltip/Tooltip";
 import { Counter, Flex } from "../..";
 import { femaleIcon, guest, home, maleIcon, minus, owner, person1, person2, person3 } from "./assets";
