--- a/src/components/Box/__stories__/Box.stories.mdx
+++ b/src/components/Box/__stories__/Box.stories.mdx
@@ -1,7 +1,7 @@
 import { Box } from "../../../components";
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
-import { createStoryMetaSettingsDecorator } from "../../../storybook/functions/createStoryMetaSettingsDecorator";
-import { Tip, UsageGuidelines } from "../../../storybook";
+import { Tip, createStoryMetaSettingsDecorator } from "../../../storybook";
+import { UsageGuidelines } from "monday-ui-storybook-blocks";
 import {
   DIALOG_CONTENT_CONTAINER,
   DIVIDER,
