--- a/src/components/Dialog/__stories__/Dialog.stories.mdx
+++ b/src/components/Dialog/__stories__/Dialog.stories.mdx
@@ -1,6 +1,7 @@
 import Dialog from "../Dialog";
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
-import { createStoryMetaSettingsDecorator, Link } from "../../../storybook";
+import { createStoryMetaSettingsDecorator } from "../../../storybook";
+import { Link } from "monday-ui-storybook-blocks";
 import { Button, DialogContentContainer, IconButton, AttentionBox } from "../../../components";
 import { ExampleContent } from "./helpers";
 import { Info } from "../../Icon/Icons";
