--- a/src/components/IconButton/__stories__/IconButton.stories.mdx
+++ b/src/components/IconButton/__stories__/IconButton.stories.mdx
@@ -20,7 +20,8 @@ import {
 } from "../../Icon/Icons";
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
 import { BUTTON_GROUP, MENU_BUTTON, BUTTON } from "../../../storybook/components/related-components/component-description-map";
-import { Link, createComponentTemplate, createStoryMetaSettingsDecorator } from "../../../storybook";
+import { createStoryMetaSettingsDecorator } from "../../../storybook";
+import { Link, createComponentTemplate } from "monday-ui-storybook-blocks";
 import Icon from "../../Icon/Icon";
 import Heading from "../../Heading/Heading";
 import classes from "./iconButton.stories.module.scss";
