--- a/src/components/MultiStepIndicator/__stories__/multiStepIndicator.stories.mdx
+++ b/src/components/MultiStepIndicator/__stories__/multiStepIndicator.stories.mdx
@@ -2,10 +2,9 @@ import MultiStepIndicator from "../MultiStepIndicator";
 import { useCallback, useEffect, useMemo, useState } from "react";
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
 import { STEP_STATUSES } from "../MultiStepConstants";
-import { StoryDescription, createComponentTemplate } from "monday-ui-storybook-blocks";
+import { StoryDescription, createComponentTemplate, Link } from "monday-ui-storybook-blocks";
 import { BREADCRUBMS, STEPPER, TABS } from "../../../storybook/components/related-components/component-description-map";
 import { firstSteps, secondSteps, thirdSteps } from "./helper.js";
-import { Link } from "../../../storybook/components";
 import { Featured } from "../../Icon/Icons";
 import Flex from "../../Flex/Flex";
 import "./multiStepIndicator.stories.scss";
