--- a/src/components/Text/__stories__/Text.stories.mdx
+++ b/src/components/Text/__stories__/Text.stories.mdx
@@ -1,7 +1,7 @@
 import Text from "../Text";
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
-import { createComponentTemplate, createStoryMetaSettingsDecorator, Tip } from "../../../storybook";
-import { Link as StorybookLink } from "../../../storybook";
+import {  createStoryMetaSettingsDecorator, Tip } from "../../../storybook";
+import { Link as StorybookLink, createComponentTemplate } from "monday-ui-storybook-blocks";
 import Flex from "../../Flex/Flex";
 import { AlphaWarning } from "../../../storybook/components/alpha-warning/alpha-warning";
 import { ONE_LINE_ELLIPSIS_TEST_ID, OVERFLOW_TEXT_CONTAINER_ID } from "../__tests__/text-tests-constants";
