--- a/src/components/Toast/__stories__/toast.stories.mdx
+++ b/src/components/Toast/__stories__/toast.stories.mdx
@@ -1,10 +1,11 @@
 import { useCallback, useMemo, useState } from "react";
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
 import Toast from "../Toast";
-import { createComponentTemplate, createStoryMetaSettingsDecorator } from "../../../storybook";
+import { createStoryMetaSettingsDecorator } from "../../../storybook";
 import Flex from "../../Flex/Flex";
 import Button from "../../Button/Button";
-import { Link, Tip, UsageGuidelines } from "../../../storybook/components";
+import { Tip } from "../../../storybook/components";
+import { Link, UsageGuidelines, createComponentTemplate } from "monday-ui-storybook-blocks";
 import {
   ALERT_BANNER,
   ATTENTION_BOX,
