--- a/src/components/VirtualizedGrid/__stories__/VirtualizedGrid.stories.mdx
+++ b/src/components/VirtualizedGrid/__stories__/VirtualizedGrid.stories.mdx
@@ -2,7 +2,7 @@ import { useCallback, useMemo, useState } from "react";
 import VirtualizedGrid from "../VirtualizedGrid";
 import Button from "../../Button/Button";
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
-import { UsageGuidelines } from "../../../storybook";
+import { UsageGuidelines } from "monday-ui-storybook-blocks";
 import { generateItems, itemRenderer } from "./VirtualizedGrid.stories";
 
 <Meta title="Navigation/VirtualizedGrid" component={VirtualizedGrid} />
