--- a/src/hooks/useAfterFirstRender/__stories__/useAfterFirstRender.stories.mdx
+++ b/src/hooks/useAfterFirstRender/__stories__/useAfterFirstRender.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta, Story } from "@storybook/addon-docs";
 import useAfterFirstRender from "..";
-import { FunctionArgument, FunctionArguments, UsageGuidelines } from "../../../storybook";
+import { FunctionArgument, FunctionArguments, UsageGuidelines } from "monday-ui-storybook-blocks";
 
 <Meta title="Hooks/useAfterFirstRender" />
 
