--- a/src/hooks/useClickableProps/__stories__/useClickableProps.stories.mdx
+++ b/src/hooks/useClickableProps/__stories__/useClickableProps.stories.mdx
@@ -1,6 +1,7 @@
 import { useCallback, useRef } from "react";
 import { Canvas, Meta, Story } from "@storybook/addon-docs";
-import { Link, Tip } from "../../../storybook";
+import { Tip } from "../../../storybook";
+import { Link } from "monday-ui-storybook-blocks";
 import useClickableProps from "../useClickableProps";
 import "./useClickableProps.stories.scss";
 
