--- a/src/hooks/useDisableScroll/__stories__/useDisableScroll.stories.mdx
+++ b/src/hooks/useDisableScroll/__stories__/useDisableScroll.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta, Story } from "@storybook/addon-docs";
 import useDisableScroll from "..";
-import { FunctionArgument, FunctionArguments, UsageGuidelines } from "../../../storybook";
+import { FunctionArgument, FunctionArguments, UsageGuidelines } from "monday-ui-storybook-blocks";
 
 <Meta title="Hooks/useDisableScroll" />
 
