Remove Frame, RelatedComponent, decorators

--- a/src/components/AlertBanner/__stories__/alertBanner.stories.mdx
+++ b/src/components/AlertBanner/__stories__/alertBanner.stories.mdx
@@ -3,7 +3,7 @@ import AlertBanner from "../AlertBanner";
 import AlertBannerText from "../AlertBannerText/AlertBannerText";
 import AlertBannerLink from "../AlertBannerLink/AlertBannerLink";
 import AlertBannerButton from "../AlertBannerButton/AlertBannerButton";
-import { ComponentRules, RelatedComponents, UsageGuidelines } from "monday-ui-storybook-blocks";
+import { ComponentRules, UsageGuidelines } from "monday-ui-storybook-blocks";
 import { Link } from "monday-ui-storybook-blocks";
 import { createStoryMetaSettingsDecorator } from "../../../storybook/functions/createStoryMetaSettingsDecorator";
 import {
