Remove createComponentTemplate.js

--- a/src/components/MenuButton/__stories__/MenuButton.stories.mdx
+++ b/src/components/MenuButton/__stories__/MenuButton.stories.mdx
@@ -1,7 +1,8 @@
 import MenuButton from "../MenuButton";
 import { noop as NOOP } from "lodash-es";
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
-import { createComponentTemplate, createStoryMetaSettingsDecorator } from "../../../storybook";
+import { createStoryMetaSettingsDecorator } from "../../../storybook";
+import { createComponentTemplate } from "monday-ui-storybook-blocks";
 import { Menu, MenuItem, MenuTitle } from "../../index";
 import {
   BUTTON,
