--- a/src/components/TextWithHighlight/__stories__/TextWithHighlight.stories.mdx
+++ b/src/components/TextWithHighlight/__stories__/TextWithHighlight.stories.mdx
@@ -1,6 +1,6 @@
 import TextWithHighlight from "../TextWithHighlight";
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
-import { createComponentTemplate } from "../../../storybook/functions/createComponentTemplate";
+import { createComponentTemplate } from "monday-ui-storybook-blocks";
 import {
   EDITABLE_HEADING,
   HEADING,
