--- a/src/components/DatePicker/__stories__/datepicker.stories.mdx
+++ b/src/components/DatePicker/__stories__/datepicker.stories.mdx
@@ -1,15 +1,15 @@
 import { useState } from "react";
-import moment from "moment";
 import DatePicker from "../DatePicker";
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
-import { createComponentTemplate, createStoryMetaSettingsDecorator } from "../../../storybook";
+import { createStoryMetaSettingsDecorator } from "../../../storybook";
+import { createComponentTemplate } from "monday-ui-storybook-blocks";
 import {
   TEXT_FIELD,
   DROPDOWN,
   DIALOG_CONTENT_CONTAINER
 } from "../../../storybook/components/related-components/component-description-map";
-import styles from "./DatePicker.stories.module.scss";
 import DialogContentContainer from "../../DialogContentContainer/DialogContentContainer";
+import styles from "./DatePicker.stories.module.scss";
 
 export const metaSettings = createStoryMetaSettingsDecorator({
   component: DatePicker,
