--- a/src/components/DialogContentContainer/__stories__/DialogContentContainer.stories.mdx
+++ b/src/components/DialogContentContainer/__stories__/DialogContentContainer.stories.mdx
@@ -1,6 +1,7 @@
 import DialogContentContainer from "../DialogContentContainer";
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
-import { createComponentTemplate, createStoryMetaSettingsDecorator } from "../../../storybook";
+import { createStoryMetaSettingsDecorator } from "../../../storybook";
+import { createComponentTemplate } from "monday-ui-storybook-blocks";
 import DialogContentContainerExample from "./DialogContentContainerExample";
 
 export const metaSettings = createStoryMetaSettingsDecorator({
