--- a/src/components/EditableHeading/__stories__/EditableHeading.stories.mdx
+++ b/src/components/EditableHeading/__stories__/EditableHeading.stories.mdx
@@ -1,6 +1,7 @@
 import EditableHeading from "../EditableHeading";
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
-import { createComponentTemplate, createStoryMetaSettingsDecorator } from "../../../storybook";
+import { createStoryMetaSettingsDecorator } from "../../../storybook";
+import { createComponentTemplate } from "monday-ui-storybook-blocks";
 
 export const metaSettings = createStoryMetaSettingsDecorator({
   component: EditableHeading,
