--- a/src/components/ListItem/__stories__/ListItem.stories.mdx
+++ b/src/components/ListItem/__stories__/ListItem.stories.mdx
@@ -1,6 +1,7 @@
 import ListItem from "../ListItem";
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
-import { createComponentTemplate, createStoryMetaSettingsDecorator } from "../../../storybook";
+import { createStoryMetaSettingsDecorator } from "../../../storybook";
+import { createComponentTemplate } from "monday-ui-storybook-blocks";
 import Send from "../../Icon/Icons/components/Send";
 import ListItemIcon from "../../ListItemIcon/ListItemIcon";
 import ListItemAvatar from "../../ListItemAvatar/ListItemAvatar";
