--- a/src/components/Menu/MenuItemButton/__stories__/MenuItemButton.stories.mdx
+++ b/src/components/Menu/MenuItemButton/__stories__/MenuItemButton.stories.mdx
@@ -1,5 +1,6 @@
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
-import { createComponentTemplate, createStoryMetaSettingsDecorator } from "../../../../storybook";
+import { createStoryMetaSettingsDecorator } from "../../../../storybook";
+import { createComponentTemplate } from "monday-ui-storybook-blocks";
 import MenuItemButton from "../MenuItemButton";
 import {
   menuItemButtonDisabledTemplate,
