--- a/src/components/Search/__stories__/Search.stories.mdx
+++ b/src/components/Search/__stories__/Search.stories.mdx
@@ -1,10 +1,11 @@
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
 import Search from "../Search";
-import { createComponentTemplate, createStoryMetaSettingsDecorator } from "../../../storybook";
+import { createStoryMetaSettingsDecorator } from "../../../storybook";
+import { createComponentTemplate } from "monday-ui-storybook-blocks";
 import DialogContentContainer from "../../DialogContentContainer/DialogContentContainer";
 import Combobox from "../../Combobox/Combobox";
 import { Tip } from "../../../storybook/components";
-import { Link, UsageGuidelines } from "monday-ui-storybook-blocks";
+import { Link, UsageGuidelines, createComponentTemplate } from "monday-ui-storybook-blocks";
 import {
   COMBOBOX,
   DROPDOWN,
