--- a/src/components/Tabs/TabPanel/__stories__/tab-panel.stories.mdx
+++ b/src/components/Tabs/TabPanel/__stories__/tab-panel.stories.mdx
@@ -1,5 +1,5 @@
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
-import { createComponentTemplate } from "../../../../storybook/functions/createComponentTemplate";
+import { createComponentTemplate } from "monday-ui-storybook-blocks";
 import TabPanel from "../TabPanel";
 
 <Meta
