--- a/src/components/Title/__stories__/Title.stories.mdx
+++ b/src/components/Title/__stories__/Title.stories.mdx
@@ -1,7 +1,7 @@
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
-import { createComponentTemplate, createStoryMetaSettingsDecorator, Tip } from "../../../storybook";
+import { createStoryMetaSettingsDecorator, Tip, AlphaWarning } from "../../../storybook";
 import Flex from "../../Flex/Flex";
-import { AlphaWarning } from "../../../storybook/components/alpha-warning/alpha-warning";
+import { createComponentTemplate } from "monday-ui-storybook-blocks";
 import Title from "../Title";
 import { OVERFLOW_TITLE_CONTAINER_ID, ONE_LINE_ELLIPSIS_TEST_ID } from "../__tests__/title-tests-constants";
 import styles from "./Title.stories.module.scss";
