docs(DatePicker): set default selected days for stories
this change is for Chromatic visual changes to be stable by making it dependent from today's date

--- a/src/components/DatePicker/__stories__/datepicker.stories.mdx
+++ b/src/components/DatePicker/__stories__/datepicker.stories.mdx
@@ -11,6 +11,8 @@ import {
 import styles from "./DatePicker.stories.module.scss";
 import DialogContentContainer from "../../DialogContentContainer/DialogContentContainer";
 
+export const MOCK_INITIAL_DATE = { startDate: moment("2023-05-01"), endDate: moment("2023-05-03") }; // for Chromatic check to always have the same date UI
+
 export const metaSettings = createStoryMetaSettings({
   component: DatePicker,
   actionPropsArray: ["onPickDate"]
@@ -43,7 +45,7 @@ A simple and reusable Datepicker component
 <Canvas>
   <Story name="Overview">
     {() => {
-      const [date, setDate] = useState(null);
+      const [date, setDate] = useState(MOCK_INITIAL_DATE.startDate);
       return (
         <DialogContentContainer className={styles.datepickerDialogContentContainer}>
           <DatePicker data-testid="date-picker" date={date} onPickDate={d => setDate(d)} />
@@ -66,7 +68,7 @@ Allows users to select a single date
 <Canvas>
   <Story name="Single Day">
     {() => {
-      const [date, setDate] = useState(null);
+      const [date, setDate] = useState(MOCK_INITIAL_DATE.startDate);
       return (
         <DialogContentContainer className={styles.datepickerDialogContentContainer}>
           <DatePicker data-testid="date-picker" date={date} onPickDate={d => setDate(d)} />
@@ -83,7 +85,7 @@ Allows users to select a date range
 <Canvas>
   <Story name="Date Range">
     {() => {
-      const [date, setDate] = useState({});
+      const [date, setDate] = useState(MOCK_INITIAL_DATE);
       return (
         <DialogContentContainer className={styles.datepickerDialogContentContainer}>
           <DatePicker
@@ -104,7 +106,7 @@ Allows users to select a date range
 <Canvas>
   <Story name="Number Of Months">
     {() => {
-      const [date, setDate] = useState(null);
+      const [date, setDate] = useState(MOCK_INITIAL_DATE.startDate);
       return (
         <DialogContentContainer className={styles.datepickerDialogContentContainer}>
           <DatePicker numberOfMonths={2} data-testid="date-picker" date={date} onPickDate={d => setDate(d)} />
