Fix TextField story imports

--- a/src/components/TextField/__stories__/TextField.stories.mdx
+++ b/src/components/TextField/__stories__/TextField.stories.mdx
@@ -1,12 +1,8 @@
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
 import TextField from "../TextField";
 import { TextFieldTextType } from "../TextFieldConstants";
-import {
-  ComponentRules,
-  createComponentTemplate,
-  createStoryMetaSettingsDecorator,
-  UsageGuidelines
-} from "../../../storybook";
+import { createStoryMetaSettingsDecorator } from "../../../storybook";
+import { ComponentRules, createComponentTemplate, UsageGuidelines } from "monday-ui-storybook-blocks";
 import { Check, CloseSmall, Email, Show } from "../../Icon/Icons";
 import { COMBOBOX, DROPDOWN, SEARCH } from "../../../storybook/components/related-components/component-description-map";
 import "./TextField.stories.scss";
