--- a/src/hooks/useTimeout/__stories__/useTimeout.stories.mdx
+++ b/src/hooks/useTimeout/__stories__/useTimeout.stories.mdx
@@ -1,7 +1,7 @@
 import { useCallback } from "react";
 import { Canvas, Meta, Story } from "@storybook/addon-docs";
 import useTimeout from "..";
-import { FunctionArgument, FunctionArguments } from "../../../storybook";
+import { FunctionArgument, FunctionArguments } from "monday-ui-storybook-blocks";
 
 <Meta title="Hooks/useTimeout" />
 
