--- a/src/hooks/useDebounceEvent/__stories__/useDebounceEvent.stories.mdx
+++ b/src/hooks/useDebounceEvent/__stories__/useDebounceEvent.stories.mdx
@@ -2,7 +2,7 @@ import { useState } from "react";
 import { Canvas, Meta, Story } from "@storybook/addon-docs";
 import useDebounceEvent from "..";
 import "../../__stories__/general-hooks-stories.scss";
-import { FunctionArgument, FunctionArguments } from "../../../storybook";
+import { FunctionArgument, FunctionArguments } from "monday-ui-storybook-blocks";
 
 <Meta title="Hooks/useDebounceEvent" />
 
