--- a/src/hooks/useSetFocus/__stories__/useSetFocus.stories.mdx
+++ b/src/hooks/useSetFocus/__stories__/useSetFocus.stories.mdx
@@ -2,7 +2,7 @@ import { Story, Canvas, Meta } from "@storybook/addon-docs";
 import { useRef } from "react";
 import { Button, Flex, InputField } from "../../../components";
 import useSetFocus from "../../useSetFocus/index";
-import { FunctionArgument, FunctionArguments } from "../../../storybook";
+import { FunctionArgument, FunctionArguments } from "monday-ui-storybook-blocks";
 import styles from "./useSetFocus.stories.module.scss";
 
 <Meta title="Hooks/useSetFocus" />
