--- a/src/storybook/stand-alone-documentaion/colors/colors.stories.mdx
+++ b/src/storybook/stand-alone-documentaion/colors/colors.stories.mdx
@@ -3,7 +3,7 @@ import { Frame } from "monday-ui-storybook-blocks";
 import { TYPOGRAPHY, SHADOW, SPACING } from "../../components/related-components/component-description-map";
 import { SemanticColors } from "./semantic-colors/semantic-colors";
 import { BackgroundColors } from "./background-colors/background-colors";
-import { TextColors } from "../../components/text-colors/text-colors";
+import { TextColors } from "./text-colors/text-colors";
 import { BorderColors } from "./border-colors/border-colors";
 import { ContentColors } from "./content-colors/content-colors";
 import { cardColorsExample, menuColorsExample } from "./assets";
